added favicon and changed title

--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Iro</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 <div id="app"></div>
